[package]
name = "menu_glium_api"
version = "0.1.2"
edition = "2024"
authors = ["notsure55 contact_email: blackender5123@mailfence.com"]
description = "menu api for glium, specifically for building overlays in windows"
repository = "https://github.com/notsure55/menu_api"
keywords = ["overlay", "glium"]
license = "MIT"

[dependencies]
windows-core = "0.61.0"
cgmath = "0.18.0"
rusttype = "0.8"

[dependencies.glium]
version = "0.36.0"

[dependencies.glutin]
version = "0.32.3"

[dependencies.winit]
version = "0.30.10"
features = [ "rwh_06", "rwh_05" ]

[dependencies.windows]
version = "0.61.1"
features = [ "Win32","Win32_System","Win32_System_Threading", "Win32_UI", "Win32_UI_WindowsAndMessaging", "Win32_System_Diagnostics", "Win32_System_Diagnostics_Debug", "Win32_System_LibraryLoader", "Win32_System_ProcessStatus", "Win32_UI_Input", "Win32_UI_Input_KeyboardAndMouse", "Win32_Graphics", "Win32_Graphics_Gdi" ]
